tests/invalid/undef_cond.c
int main() {
    return 1 ? x : 0;
}
